-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.0
-
None
-
47b33bcb65b642d808251bed7e38fc36a3e89bfc
ModelNode::setObjectValue method does not update objectCache. (But ModelNode::setProperty does).
Reproduce:
>>
model.setProperty(0, "test", true);
console.log(model.get(0).test); // output: true
model.set(0,
);
console.log(model.get(0).test); // output: true, but attribute is successfully updated to false
>>
- relates to
-
QTBUG-9564 ListElement and delegate property inconsistency weirdness
-
- Closed
-