ModelNode::setObjectValue() must update the object cache.

Task-number: QTBUG-9509